More ignore rules and some little tweaks to maven config and social config

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ build
 **/src/test/java/exploration
 .gradle
 spring-social-core/src/test/java/exploration
-**/.classpath
-**/.project
-**/.settings
+.classpath
+.project
+.settings
+target
 **/bin
