--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.nobien.springsocial.examples</groupId>
-	<artifactId>spring-social-foursquare</artifactId>
-	<name>Spring Social Foursquare</name>
+	<artifactId>spring-social-foursquare-example</artifactId>
+	<name>Spring Social Foursquare Example</name>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
 	<properties>
