--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
 	<version>1.0.0</version>
 	<properties>
 		<java-version>1.6</java-version>
-		<org.springframework.social-version>1.0.0.BUILD-SNAPSHOT</org.springframework.social-version>
+		<org.springframework.social-version>1.0.1.BUILD-SNAPSHOT</org.springframework.social-version>
+		<org.springframework.social.foursquare-version>1.0.0.BUILD-SNAPSHOT</org.springframework.social.foursquare-version>
 		<org.springframework-version>3.1.0.BUILD-SNAPSHOT</org.springframework-version>
-		<org.springframework.security.crypto-version>3.1.0.RC2.crypto</org.springframework.security.crypto-version>
+		<org.springframework.security-version>3.1.0.RC3</org.springframework.security-version>
 		<org.slf4j-version>1.6.1</org.slf4j-version>
 	</properties>
 	<dependencies>
@@ -50,13 +51,23 @@
 		<dependency>
 		    <groupId>org.springframework.social</groupId>
 		    <artifactId>spring-social-foursquare</artifactId>
-	        <version>${org.springframework.social-version}</version>
+	        <version>${org.springframework.social.foursquare-version}</version>
 	    </dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-crypto</artifactId>
-			<version>${org.springframework.security.crypto-version}</version>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.springframework.security-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${org.springframework.security-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.springframework.security-version}</version>
+		</dependency>		
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
